Tests/bad0.my
def print_it():
  print 3 + true    // error
  return
fed
print_it()
do_it()   // error
print (5 and 2) * 3   // error
print print_it + 1    // error
